--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Drogaria_Araujo",
+  "name": "AraujoAutomationTest",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
